SERVER-91046 Improve error message for moveChunk when migrations are disallowed (#26367)

GitOrigin-RevId: 66c3a4ef397bd0c79f46bf46e9a1f4a3865b86de